[gd_scene load_steps=3 format=3 uid="uid://cgef17oa63su7"]

[ext_resource type="Script" path="res://logistics/requisitions_module/entertainmentGame/EntertainmentGame.gd" id="1_8xsf3"]
[ext_resource type="Texture2D" uid="uid://bggni8sn1nl73" path="res://temp-assets/32x32-cube.png" id="1_e5k4v"]

[node name="EntertainmentGame" type="Node2D" groups=["EntertainmentGame"]]
script = ExtResource("1_8xsf3")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.529412)
position = Vector2(319, 176.5)
scale = Vector2(20.9375, 12.0313)
texture = ExtResource("1_e5k4v")

[node name="DieResultOne" type="Label" parent="."]
offset_left = 227.0
offset_top = 157.0
offset_right = 267.0
offset_bottom = 180.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DieResultTwo" type="Label" parent="."]
offset_left = 360.0
offset_top = 158.0
offset_right = 400.0
offset_bottom = 181.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DieGuessNumber" type="Label" parent="."]
offset_left = 289.0
offset_top = 225.0
offset_right = 329.0
offset_bottom = 248.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="."]
offset_left = 9.0
offset_top = 9.0
offset_right = 126.0
offset_bottom = 55.0
text = "EXIT"

[node name="LowerButton" type="Button" parent="."]
offset_left = 149.0
offset_top = 271.0
offset_right = 266.0
offset_bottom = 317.0
text = "LOWER"

[node name="HigherButton" type="Button" parent="."]
offset_left = 351.0
offset_top = 271.0
offset_right = 468.0
offset_bottom = 317.0
text = "HIGHER"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="LowerButton" to="." method="_on_lower_button_pressed"]
[connection signal="pressed" from="HigherButton" to="." method="_on_higher_button_pressed"]
